--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "DevFit app.",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:coverage": "vitest --coverage",
 		"start": "node dist/server.js",
 		"dev": "tsx --watch src/server.ts",
 		"build": "tsup src"
@@ -15,12 +17,15 @@
 	"devDependencies": {
 		"@types/bcryptjs": "2.4.6",
 		"@types/node": "20.14.2",
+		"@vitest/coverage-v8": "1.6.0",
 		"globals": "15.4.0",
 		"prisma": "5.15.0",
 		"tsup": "8.1.0",
 		"tsx": "4.15.1",
 		"typescript": "5.4.5",
-		"typescript-eslint": "7.13.0"
+		"typescript-eslint": "7.13.0",
+		"vite-tsconfig-paths": "4.3.2",
+		"vitest": "1.6.0"
 	},
 	"dependencies": {
 		"@prisma/client": "5.15.0",
