--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"test": "vitest run",
 		"test:watch": "vitest",
-		"test:coverage": "vitest --coverage",
+		"test:coverage": "vitest run --coverage",
+		"test:ui": "vitest --ui",
 		"start": "node dist/server.js",
 		"dev": "tsx --watch src/server.ts",
 		"build": "tsup src"
@@ -18,6 +19,7 @@
 		"@types/bcryptjs": "2.4.6",
 		"@types/node": "20.14.2",
 		"@vitest/coverage-v8": "1.6.0",
+		"@vitest/ui": "1.6.0",
 		"globals": "15.4.0",
 		"prisma": "5.15.0",
 		"tsup": "8.1.0",
